Fix file system exception edit problems